// The types defined in this file are nor meant to be exposed to the user.
// They are used internally by the service to manage the resources.
// THis is mainly convenience as we can leverage the code generation to create the
// necessary types to manage the resources and utilize the same macros etc.
syntax = "proto3";

package unitycatalog.internal;

import "unitycatalog/catalogs/v1/models.proto";
import "unitycatalog/credentials/v1/models.proto";
import "unitycatalog/external_locations/v1/models.proto";
import "unitycatalog/recipients/v1/models.proto";
import "unitycatalog/schemas/v1/models.proto";
import "unitycatalog/shares/v1/models.proto";
import "unitycatalog/tables/v1/models.proto";

// Dummy message to hold all resources.
message Resource {
  oneof resource {
    unitycatalog.shares.v1.Share share = 1;
    unitycatalog.credentials.v1.Credential credential = 4;
    unitycatalog.catalogs.v1.Catalog catalog = 6;
    unitycatalog.schemas.v1.Schema schema = 7;
    unitycatalog.tables.v1.Table table = 8;
    unitycatalog.tables.v1.Column column = 9;
    unitycatalog.external_locations.v1.ExternalLocation external_location = 10;
    unitycatalog.recipients.v1.Recipient recipient = 11;
  }
}
